# exam-scheduler

./: .env.dev.example  .env.example  .env.test.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py
core/: permissions.py
core/management/commands/: create_initial_data.py
reservations/: models.py  permissions.py  schemas.py  serializers.py  urls.py  views.py
reservations/migrations/: 0001_initial.py
reservations/tests/: test_reservation_confirm.py  test_reservation_create.py  test_reservation_delete.py  test_reservation_update.py
schedules/: models.py  schemas.py  serializers.py  urls.py  views.py
schedules/migrations/: 0001_initial.py
users/: schemas.py  serializers.py  tests.py  urls.py  views.py
users/serializers/: __init__.py  jwt.py  users.py
users/views/: __init__.py  jwt.py  users.py
